<resources>
    <string name="app_name">MartSystem</string>
    <string name="a_place_where_everything_sells_welcome_to_e_mart">A Place where everything sells.</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="signup">SignUp</string>
    <string name="electronics">Electronics</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_signup_email_address">Enter Email Address</string>
    <string name="validate_your_email_address">Validate your Email Address</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="done">Done</string>
    <string name="enter_your_first_name">Please enter your First Name</string>
    <string name="enter_your_last_name">Please enter your Last Name</string>
    <string name="enter_your_email">Please enter your Email Address</string>
    <string name="validate_your_email">Please Validate your Email Address</string>
    <string name="enter_your_password">Please enter your Password</string>
    <string name="validate_your_password">Please Validate your Password</string>
    <string name="enter_your_number">Please enter your Phone Number</string>
    <string name="emails_does_not_match">Email Addresses doesn\'t match</string>
    <string name="passwords_does_not_match">Passwords doesn\'t match</string>
    <string name="can_not_be_empty">Can\'t be empty</string>
    <string name="account_created">Account created Successfully</string>
    <string name="add_product">add product</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_product_s_category">Enter Product Category</string>
    <string name="enter_product_price">Enter Product Price</string>
    <string name="enter_product_quantity">Enter Product Quantity</string>
    <string name="can_not_be_empty1">can\'t be empty</string>
    <string name="data_added">Data Added Successfully</string>
    <string name="please_select_your_category">Please Select your Category</string>
    <string name="available">Available</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="enter_the_category_of_the_product">Enter the Category of the Product</string>
    <string name="browse_image">Browse Image</string>
    <string name="buy">BUY</string>
    <string name="enter_an_appropriate_email">Please Enter an appropriate Email Addresss</string>
    <string name="enter_an_appropriate_password">Please enter an appropriate password</string>
    <string name="welcome_to_e_mart">WELCOME TO E-MART</string>
    <string name="invalid_email_or_password">Invalid Email address or password</string>
    <string name="Switch_to_Buyer_Mode">Switch to Buyer Mode</string>
    <string name="Switch_to_Seller_Mode">Switch to Seller Mode</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="enter_product_description">Enter product Description</string>
    <string name="product_is_in_less_amount">Store does not have this many number of product that you have entered</string>
</resources>